--- a/project/utils/constants.js.example
+++ b/project/utils/constants.js.example
@@ -1,3 +1,5 @@
 const API_URL = 'https://api-sepolia.etherscan.io/api'
 const API_KEY = '**********************************'
 
+const ALCHEMY_API_KEY = '********************************'
+
